--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@testing-library/user-event": "^13.2.1",
         "axios": "^0.27.2",
         "hamburger-react": "^2.5.0",
+        "moment": "^2.29.3",
         "node-sass": "^7.0.1",
         "react": "^18.1.0",
         "react-data-table-component": "^7.5.2",
