--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^13.0.0",
         "@testing-library/user-event": "^13.2.1",
+        "apexcharts": "^3.35.3",
         "axios": "^0.27.2",
         "hamburger-react": "^2.5.0",
         "moment": "^2.29.3",
         "node-sass": "^7.0.1",
         "react": "^18.1.0",
+        "react-apexcharts": "^1.4.0",
         "react-data-table-component": "^7.5.2",
         "react-dom": "^18.1.0",
         "react-icons": "^4.4.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
-        "recharts": "^2.1.10",
         "sass": "^1.52.1",
         "styled-components": "^5.3.5",
         "web-vitals": "^2.1.0"
